feat: ChallengeService 내 응답 생성 로직을 Assembler로 분리 및 추천 챌린지가 부족할 시 인기 챌린지로 보충하는 로직 추가