@@ -2,6 +2,7 @@ package com.trybe.moduleapi.challenge.service;
 
 import com.trybe.moduleapi.challenge.dto.ChallengeRequest;
 import com.trybe.moduleapi.challenge.dto.ChallengeResponse;
+import com.trybe.moduleapi.challenge.dto.ChallengeResponseAssembler;
 import com.trybe.moduleapi.challenge.event.ChallengeEvent;
 import com.trybe.moduleapi.challenge.event.ChallengeEventType;
 import com.trybe.moduleapi.challenge.event.pub.ChallengeEventPublisher;
@@ -25,8 +26,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 public class ChallengeService {
@@ -38,8 +38,9 @@ public class ChallengeService {
     private final PopularChallengeService popularChallengeService;
     private final ChallengeRecommendationClientService challengeRecommendationClientService;
     private final ChatService chatService;
+    private final ChallengeResponseAssembler challengeResponseAssembler;
 
-    public ChallengeService(ChallengeRepository challengeRepository, ChallengeParticipationRepository challengeParticipationRepository, ChallengeBookmarkCache challengeBookmarkCache, ChallengeViewCache challengeViewCache, ChallengeEventPublisher challengeEventPublisher, PopularChallengeService popularChallengeService, ChallengeRecommendationClientService challengeRecommendationClientService, ChatService chatService) {
+    public ChallengeService(ChallengeRepository challengeRepository, ChallengeParticipationRepository challengeParticipationRepository, ChallengeBookmarkCache challengeBookmarkCache, ChallengeViewCache challengeViewCache, ChallengeEventPublisher challengeEventPublisher, PopularChallengeService popularChallengeService, ChallengeRecommendationClientService challengeRecommendationClientService, ChatService chatService, ChallengeResponseAssembler challengeResponseAssembler) {
         this.challengeRepository = challengeRepository;
         this.challengeParticipationRepository = challengeParticipationRepository;
         this.challengeBookmarkCache = challengeBookmarkCache;
@@ -48,8 +49,10 @@ public class ChallengeService {
         this.popularChallengeService = popularChallengeService;
         this.challengeRecommendationClientService = challengeRecommendationClientService;
         this.chatService = chatService;
+        this.challengeResponseAssembler = challengeResponseAssembler;
     }
 
+    private static final int RECOMMEND_CHALLENGE_COUNT = 20;
     private static final int POPULAR_CHALLENGE_COUNT = 20;
 
     @Transactional
@@ -69,35 +72,55 @@ public class ChallengeService {
     @Transactional(readOnly = true)
     public ChallengeResponse.Detail find(User user, Long id) {
         Challenge challenge = getChallenge(id);
+        Long userId = user == null ? null : user.getId();
 
-        if (user != null) {
-            handleView(user.getId(), challenge);
-        }
+        handleView(userId, challenge);
 
-        return createDetail(user, challenge);
+        return challengeResponseAssembler.toDetail(challenge, userId);
     }
 
     @Transactional(readOnly = true)
     public PageResponse<ChallengeResponse.Preview> findAll(User user, ChallengeRequest.Read request, Pageable pageable) {
         Page<Challenge> challenges = challengeRepository.getFilteredChallenges(request.keyword(), request.statuses(), request.categories(), pageable);
+        Long userId = user == null ? null : user.getId();
 
-        Page<ChallengeResponse.Preview> challengeSummaries = challenges.map(challenge -> createPreview(user, challenge));
+        Page<ChallengeResponse.Preview> challengePreviews = challenges.map(challenge -> challengeResponseAssembler.toPreview(challenge, userId));
 
-        return new PageResponse<>(challengeSummaries);
+        return new PageResponse<>(challengePreviews);
     }
 
     @Transactional(readOnly = true)
     public List<ChallengeResponse.Preview> getPopular(User user) {
         List<Challenge> challenges = popularChallengeService.getTopPopularChallenges(POPULAR_CHALLENGE_COUNT);
+        Long userId = user == null ? null : user.getId();
 
         return challenges.stream()
-                .map(challenge -> createPreview(user, challenge))
-                .collect(Collectors.toList());
+                .map(challenge -> challengeResponseAssembler.toPreview(challenge, userId))
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public List<ChallengeResponse.Preview> getRecommendations(User user) {
-        return challengeRecommendationClientService.getChallengeRecommendations(user.getId());
+        List<Challenge> challenges = challengeRecommendationClientService.getChallengeRecommendations(user.getId());
+
+        if (challenges.size() < RECOMMEND_CHALLENGE_COUNT) {
+            Set<Challenge> challengeSet = new LinkedHashSet<>(challenges);
+
+            List<Challenge> popularChallenges = popularChallengeService.getTopPopularChallenges(RECOMMEND_CHALLENGE_COUNT);
+            challengeSet.addAll(popularChallenges);
+
+            challenges = new ArrayList<>(challengeSet);
+        }
+
+        if (challenges.size() > RECOMMEND_CHALLENGE_COUNT) {
+            challenges = challenges.subList(0, RECOMMEND_CHALLENGE_COUNT);
+        }
+
+        Collections.shuffle(challenges);
+
+        return challenges.stream()
+                .map(challenge -> challengeResponseAssembler.toPreview(challenge, user.getId()))
+                .toList();
     }
 
     @Transactional
@@ -109,7 +132,7 @@ public class ChallengeService {
 
         challenge.updateContent(request.title(), request.description(), request.startDate(), request.endDate(), request.capacity(), request.category());
 
-        return createDetail(user, challenge);
+        return challengeResponseAssembler.toDetail(challenge, user.getId());
     }
 
     @Transactional
@@ -121,7 +144,7 @@ public class ChallengeService {
 
         challenge.updateProof(request.proofWay(), request.proofCount());
 
-        return createDetail(user, challenge);
+        return challengeResponseAssembler.toDetail(challenge, user.getId());
     }
 
     @Transactional
@@ -137,31 +160,9 @@ public class ChallengeService {
         challengeRepository.delete(challenge);
     }
 
-    private ChallengeResponse.Detail createDetail(User user, Challenge challenge) {
-        int participantCount = getParticipantCount(challenge.getId());
-        ChallengeResponse.Bookmark bookmark = createBookmark(user, challenge.getId());
-        return ChallengeResponse.Detail.from(challenge, participantCount, bookmark);
-    }
-
-    private ChallengeResponse.Preview createPreview(User user, Challenge challenge) {
-        int participantCount = getParticipantCount(challenge.getId());
-        ChallengeResponse.Bookmark bookmark = createBookmark(user, challenge.getId());
-        return ChallengeResponse.Preview.from(challenge, participantCount, bookmark);
-    }
-
-    private ChallengeResponse.Bookmark createBookmark(User user, Long challengeId) {
-        int bookmarkCount = challengeBookmarkCache.getBookmarkCount(challengeId);
-        Boolean bookmarked = user == null ? null : challengeBookmarkCache.isBookmarked(user.getId(), challengeId);
-        return new ChallengeResponse.Bookmark(bookmarkCount, bookmarked);
-    }
-
     private Challenge getChallenge(Long id) {
         return challengeRepository.findById(id)
                 .orElseThrow(NotFoundChallengeException::new);
-    }
-
-    private int getParticipantCount(Long challengeId) {
-        return challengeParticipationRepository.countByChallengeIdAndStatus(challengeId, ParticipationStatus.ACCEPTED);
     }
 
     private void validateChallengeStatus(Challenge challenge, boolean shouldBe, ChallengeStatus status, String message) {
@@ -178,7 +179,7 @@ public class ChallengeService {
 
     private void handleView(Long userId, Challenge challenge) {
         Long challengeId = challenge.getId();
-        if (!challengeViewCache.hasViewed(userId, challengeId)) {
+        if (userId != null && !challengeViewCache.hasViewed(userId, challengeId)) {
             challengeViewCache.recordView(userId, challengeId);
             challengeEventPublisher.publish(new ChallengeEvent(challenge, userId, ChallengeEventType.VIEW));
         }
